RESOLVED FIXED120432
REGRESSION(r154586): Past names map should only be used when named item is empty
https://bugs.webkit.org/show_bug.cgi?id=120432
Summary REGRESSION(r154586): Past names map should only be used when named item is empty
Ryosuke Niwa
Reported 2013-08-28 11:39:22 PDT
When we found any form associated element or associated image elements for a given name, we should not be using the past names map. i.e. the past names map should only be used if there are not elements matching the name. This accidentally regressed in http://trac.webkit.org/changeset/154586 because the old code behaved correctly when getNamedElements were called in pairs.
Attachments
Fixes the bug (4.27 KB, patch)
2013-08-28 11:56 PDT, Ryosuke Niwa
andersca: review+
Ryosuke Niwa
Comment 1 2013-08-28 11:56:13 PDT
Created attachment 209913 [details] Fixes the bug
Anders Carlsson
Comment 2 2013-08-28 11:57:23 PDT
Comment on attachment 209913 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=209913&action=review > Source/WebCore/html/HTMLFormElement.cpp:684 > + else if (elementFromPast && !namedItems.size()) Please use namedItems.isEmpty() instead.
Ryosuke Niwa
Comment 3 2013-08-28 11:58:50 PDT
Note You need to log in before you can comment on or make changes to this bug.