Source/WebCore/html/HTMLFormElement.cpp
@@ -678,11 +678,10 @@ void HTMLFormElement::getNamedElements(const AtomicString& name, Vector<RefPtr<N
     // http://www.whatwg.org/specs/web-apps/current-work/multipage/forms.html#dom-form-nameditem
     elements()->namedItems(name, namedItems);
 
-    // FIXME: The specification says we should not add the element from the past when names map when namedItems is not empty.
     HTMLElement* elementFromPast = elementFromPastNamesMap(name);
     if (namedItems.size() == 1 && namedItems.first() != elementFromPast)
         addToPastNamesMap(toHTMLElement(namedItems.first().get())->asFormNamedItem(), name);
-    else if (elementFromPast && namedItems.find(elementFromPast) == notFound)
+    else if (elementFromPast && namedItems.isEmpty())
         namedItems.append(elementFromPast);
 }
 
